# redit

./: .gitignore  CMakeLists-Linux.txt  CMakeLists-Windows.txt  CMakeLists.txt  README.md  cpy.c  file_operations.c  file_operations.h  file_utils.c  file_utils.h  main.c  redit.c
docs/: README.md
include/: error_codes.h  error_handler.h  file_operations.h  file_utils.h  flags_handler.h  modes_handler.h  paths_handle.h  paths_handler.h
src/: error_handler.c  file_operations.c  file_utils.c  flags_handler.c  main.c  modes_handler.c  paths_handle.c  paths_handler.c
